
IF(NOT DOXYGEN_FOUND)
	MESSAGE(FATAL_ERROR "Doxygen is needed to build docs.")
ENDIF(NOT DOXYGEN_FOUND)

SET(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/macsio.doxygen)
# SET(doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

# CONFIGURE_FILE(${doxyfile_in} ${doxyfile} @ONLY)

ADD_CUSTOM_TARGET(docs ALL
				COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile_in}
				WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
				VERBATIM)

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/MACSio_User_Guide
		DESTINATION share)